# MyShopEcommerce

./: pyproject.toml
myshop/: db.sqlite3
myshop/cart/: cart.py  forms.py  urls.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/myshop/: settings.py  urls.py
myshop/orders/: admin.py  models.py
myshop/orders/migrations/: 0001_initial.py
myshop/shop/: admin.py  models.py  urls.py  views.py
myshop/shop/migrations/: 0001_initial.py
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html  list.html
